# ParallelNumericMethods

./: .gitignore  CMakeLists.txt  README.md
doc/lab_01/: lab_01_report.aux  lab_01_report.fdb_latexmk  lab_01_report.fls  lab_01_report.out  lab_01_report.tex  lab_01_report.toc
doc/lab_01/_minted/: FC3F55CB2970686BE94FD85D6CE871BC.highlight.minted  _901657E821C714C2C994E9D27DFC2F72.index.minted
doc/lab_02/: lab_02_rep.tex
lab_01/: main.cpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/include/common/: memory_utils.hpp  numeric_utils.hpp  test_utils.hpp
src/common/src/: memory_utils.cpp  numeric_utils.cpp  test_utils.cpp
src/lab_01/: CMakeLists.txt
src/lab_01/src/: main.cpp
src/lab_02/: CMakeLists.txt
src/lab_02/src/: main.cpp
