add_subdirectory(common)

foreach(proj IN LISTS BUILD_PROJECT)
        if(proj MATCHES "all")
            file(GLOB DIRS "lab_*")
            foreach(dir IN LISTS DIRS)
                add_subdirectory(${dir})
            endforeach(dir IN LISTS DIRS)
            break()
        endif()
        add_subdirectory(${proj})
endforeach()
